--- a/wisdomCampus/html/signIn/signInIndex.html
+++ b/wisdomCampus/html/signIn/signInIndex.html
@@ -165,6 +165,9 @@
 						alert('failed'+this.getStatus());
 					}        
 				});
+				plus.geolocation.getCurrentPosition( geoInf, function ( e ) {
+					outSet( "获取定位位置信息失败："+e.message );
+				},{geocode:true});
 			}
 			
 			//获取定位信息
