--- a/wisdomCampus/html/new-check.html
+++ b/wisdomCampus/html/new-check.html
@@ -74,13 +74,13 @@
 				<div class="weui-cell">
 					<div class="weui-cell__hd">标题</div>
 					<div class="weui-cell__bd">
-						<input v-model="title" style="border: 1px solid gainsboro;margin-bottom: 0px;" type="text" class="weui-input" placeholder="请输入标题" />
+						<input v-model="title" maxlength="50" style="border: 1px solid gainsboro;margin-bottom: 0px;" type="text" class="weui-input" placeholder="请输入标题" />
 					</div>
 				</div>
 				<div class="weui-cell" style="align-items: flex-start;">
 					<div class="weui-cell__hd">内容</div>
 					<div class="weui-cell__bd">
-						<textarea v-model="content" class="weui-textarea" style="border: 1px solid gainsboro;margin-bottom: 0;" placeholder="请输入内容" rows="4"></textarea>
+						<textarea v-model="content" maxlength="300" class="weui-textarea" style="border: 1px solid gainsboro;margin-bottom: 0;" placeholder="请输入内容" rows="4"></textarea>
 
 					</div>
 				</div>
@@ -425,12 +425,12 @@
 					$.toast("请填写具体内容后再发布", "cancel");
 					return;
 				}
-				if(message.title.length >= 50) {
+				if(message.title.length > 50) {
 					$.toast("标题不能超过50字", "cancel");
 					return;
 				}
-				if(message.content.length >= 500) {
-					$.toast("内容不能超过500字", "cancel");
+				if(message.content.length > 300) {
+					$.toast("内容不能超过300字", "cancel");
 					return;
 				}
 				//判断输入是否符合要求
