--- a/wisdomCampus/html/home.html
+++ b/wisdomCampus/html/home.html
@@ -330,7 +330,9 @@
 				} else {
 					if(id == 6) {
 						utils.mOpenWithData("signIn/signInIndex.html", id);
-					} else {
+					}else if(id == 7){
+						utils.mOpenWithData("signIn/atterecords.html", id);
+					}else {
 						mui.toast("此功能暂未开放");
 					}
 				}
