--- a/wisdomCampus/html/signIn/atterecords.html
+++ b/wisdomCampus/html/signIn/atterecords.html
@@ -101,7 +101,7 @@
 			    margin-left: 80px;
 			}
 			
-			.mui-table-view-cell>a:not(.mui-btn).mui-active {
+			.mui-table-view-cell.mui-active {
 			    background-color: #fff;
 			}
 		</style>
